--- a/css/styles.css
+++ b/css/styles.css
@@ -8,7 +8,22 @@ html {
   -ms-hyphens: auto;
   hyphens: auto;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale
+  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  }
+
+.jumbotron {
+  background: rgba(255,255,255,.8);
+  color: rgb(80,160,112);
+  text-shadow: 1px 1px 0 rgba(255,255,255,.8);
+  margin: 0;
+}
+
+#main {
+  height: 100%;
+  background: rgba(51,51,51,.8);
+  text-shadow: none;
+  color: #fff;
 }
 
 h1 {
@@ -29,6 +44,15 @@ h3 {
   letter-spacing: 2px;
 }
 
-[ng-click] {
+a {
+  color: rgb(80,160,112);
   cursor: pointer;
+  font-weight: bold;
+}
+
+
+
+body {
+  background: url('../img/portland-Oregon-Skyline1.jpg') no-repeat center center;
+  background-size: cover;
 }
