--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,11 @@ html {
   height: 100%;
   }
 
+  body {
+    background: url('../img/portland-Oregon-Skyline1.jpg') no-repeat center center;
+    background-size: cover;
+  }
+
 .jumbotron {
   background: rgba(255,255,255,.8);
   color: rgb(80,160,112);
@@ -20,7 +25,6 @@ html {
 }
 
 #main {
-  height: 100%;
   background: rgba(51,51,51,.8);
   text-shadow: none;
   color: #fff;
@@ -42,17 +46,36 @@ h3 {
   font-family: Lato, sans-serif;
   text-transform: uppercase;
   letter-spacing: 2px;
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(255,255,255,.25);
 }
 
-a {
-  color: rgb(80,160,112);
+a,
+a:hover,
+a:active,
+a:focus {
+  color: rgb(244,199,12);
   cursor: pointer;
   font-weight: bold;
+  float: right;
 }
 
+dt,
+dd {
+  margin-bottom: 15px;
+}
 
+dt {
+  border-top: 1px solid rgba(255,255,255,.25);
+}
 
-body {
-  background: url('../img/portland-Oregon-Skyline1.jpg') no-repeat center center;
-  background-size: cover;
+dt {
+  border-top: 1px solid rgba(255,255,255,.25);
+  padding-top: 15px;
+}
+
+form:first-of-type dt {
+  border: 0;
+  padding-top: 0;
 }
